# WasmCompare

./: README.md
zip-archive-go-wasm/: go.mod  golang_version.txt  index.html  main.go  main.wasm
zip-archive-rust-wasm/: Cargo.toml  index.html  kernel_version.txt  rust_version.txt  size1m.txt
zip-archive-rust-wasm/src/: lib.rs
