[package]
name = "zip-archive-rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.66"
mime = "0.3.16"
mime_guess = "2.0.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
zip = {version="0.6" , default-features = false, features = [ "deflate" ]}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]